--- a/game.html
+++ b/game.html
@@ -84,7 +84,7 @@
   </div>
 
   <button id="reset" class="align-center" onclick="window.location.reload();">Reset Game</button>
-  <script src="game.js"></script>
+  <script src="multiplayer.js"></script>
 </body>
 
 </html>
